# ensembl-2020-server

./: .gitignore  .gitlab-ci.yml  APISpecification.yaml  Dockerfile  README.md  requirements.txt  server.geany
dauphin-interp/: Cargo.toml
dauphin-interp/src/: lib.rs
dauphin-interp/src/command/: interplibregister.rs  opcodemapping.rs
dauphin-interp/src/runtime/: context.rs  mod.rs  register.rs  value.rs
dauphin-interp/src/test/: cbor.rs  compile.rs
dauphin-interp/src/types/: fulltype.rs  mod.rs  registersignature.rs  types.rs  vectorcopy.rs  vectorregisters.rs  writevec.rs  xstructure.rs
dauphin-lib-std/: Cargo.toml
dauphin-lib-std/src/compile/: extend.rs  header.dp  numops.rs  vector.rs
dauphin-lib-std/src/interp/: eq.rs  numops.rs  print.rs
dauphin-lib-std/src/stream/: stream.rs
dauphin-lib-std/src/test/: mod.rs
src/services/dauphin/src/backup/: Cargo.toml
src/services/dauphin/src/backup/src/: lib.rs
src/services/dauphin/src/backup/src/commands/: buildtime.rs  defines.rs  dump.rs  hints.rs  ini.rs  versions.rs
src/services/dauphin/src/backup/src/test/: cbor.rs  commands.rs  compile.rs  config.rs  files.rs  mod.rs
src/services/dauphin/src/dauphin/: Cargo.toml  moved.txt  out.dpb
src/services/dauphin/src/dauphin-compile/: Cargo.toml
src/services/dauphin/src/dauphin-compile/dauphin-build/: licence-check.py
src/services/dauphin/src/dauphin-compile/src/: lib.rs
src/services/dauphin/src/dauphin-compile/src/command/: compilelink.rs  mod.rs  timetrial.rs
src/services/dauphin/src/dauphin-compile/src/commands/: mod.rs
src/services/dauphin/src/dauphin-compile/src/core/: core.rs
src/services/dauphin/src/dauphin-compile/src/generate/: assignregs.rs  call.rs  codegen.rs  compilerun.rs  dealias.rs  gencontext.rs  generate.rs  linearize.rs  mod.rs  pauses.rs  peephole.rs  prune.rs  retreat.rs  reusedead.rs  reuseregs.rs  simplify.rs  useearliest.rs
src/services/dauphin/src/dauphin-compile/src/lexer/: charsource.rs  filelexer.rs  inlinecheck.rs  inlinetokens.rs  lexer.rs  mod.rs  token.rs
src/services/dauphin/src/dauphin-compile/src/model/: command.rs  commandtypestore.rs  compilelink.rs  compilesuite.rs  complibregister.rs  definition.rs  definitionstore.rs  dfloat.rs  identifierstore.rs  instruction.rs  mod.rs  preimage.rs  regalloc.rs  signature.rs  structenum.rs  timetrial.rs
src/services/dauphin/src/dauphin-compile/src/parser/: lexutil.rs  mod.rs  node.rs  parsedecl.rs  parseexpr.rs  parser.rs
src/services/dauphin/src/dauphin-compile/src/resolver/: common.rs  core.rs  mod.rs  preamble.rs  resolvefile.rs
src/services/dauphin/src/dauphin-compile/src/test/: commands.rs  compile.rs  config.rs  files.rs
src/services/dauphin/src/dauphin-compile/src/typeinf/: constraints.rs  typemodel.rs  types.rs  typesinternal.rs  typestore.rs  typing.rs
src/services/dauphin/src/dauphin-compile/src/util/: vectorcopy.rs
src/services/dauphin/src/dauphin-compile/testdata/buildtime/: test.ini
src/services/dauphin/src/dauphin-compile/testdata/codegen/: generate-smoke.out  linearize-smoke-push.dp  linearize-smoke.dp  offset-smoke.dp  reuse-regs.dp  runnums.dp
src/services/dauphin/src/dauphin-compile/testdata/interp/: cbor-signature-named.out  cbor-signature-unnamed.out  commandsetid.out
src/services/dauphin/src/dauphin-compile/testdata/lexer/: operator.dp
src/services/dauphin/src/dauphin-compile/testdata/parser/: import-smoke.dp  import-smoke4.dp  macro.dp  parser-nonest.dp
src/services/dauphin/src/dauphin-interp/: Cargo.toml
src/services/dauphin/src/dauphin-interp-toy/: Cargo.toml
src/services/dauphin/src/dauphin-interp-toy/src/: main.rs
src/services/dauphin/src/dauphin-interp/src/: lib.rs
src/services/dauphin/src/dauphin-interp/src/command/: command.rs  commandsetid.rs  deserializer.rs  interplink.rs  interpretsuite.rs  misc.rs  mod.rs
src/services/dauphin/src/dauphin-interp/src/common/: cborutil.rs  commandsetid.rs  complexpath.rs  fulltype.rs  misc.rs  mod.rs  polymorphic.rs  register.rs  registersignature.rs  sharedvec.rs  templates.rs  types.rs  vectorcopy.rs  vectorregisters.rs  vectorsource.rs  writevec.rs  xstructure.rs
src/services/dauphin/src/dauphin-interp/src/core/: commontype.rs  consts.rs  core.rs
src/services/dauphin/src/dauphin-interp/src/interp/: context.rs  deserializer.rs  interplibregister.rs  interplink.rs  interpret.rs  interpretsuite.rs  misc.rs  mod.rs
src/services/dauphin/src/dauphin-interp/src/runtime/: interpret.rs  registers.rs
src/services/dauphin/src/dauphin-interp/src/test/: commands.rs  compile.rs  mod.rs
src/services/dauphin/src/dauphin-interp/src/types/: complexpath.rs  polymorphic.rs  sharedvec.rs  vectorsource.rs
src/services/dauphin/src/dauphin-interp/src/util/: mod.rs  templates.rs
src/services/dauphin/src/dauphin-interp/testdata/codegen/: multiprog2.dp
src/services/dauphin/src/dauphin-lib-buildtime/: Cargo.toml
src/services/dauphin/src/dauphin-lib-buildtime/src/commands/: buildtime.rs  defines.rs  dump.rs  hints.rs  ini.rs  versions.rs
src/services/dauphin/src/dauphin-lib-buildtime/src/test/: commands.rs  compile.rs
src/services/dauphin/src/dauphin-lib-std/: Cargo.toml
src/services/dauphin/src/dauphin-lib-std-compile/: Cargo.toml
src/services/dauphin/src/dauphin-lib-std-compile/src/: lib.rs
src/services/dauphin/src/dauphin-lib-std-compile/src/commands/: assign.rs  eq.rs  extend.rs  library.rs  numops.rs  print.rs  vector.rs
src/services/dauphin/src/dauphin-lib-std-compile/src/test/: compile.rs  config.rs
src/services/dauphin/src/dauphin-lib-std-compile/testdata/std/: eq.dp  extend.dp  filterassign.dp  line-number.dp  print.dp  vector-append.dp
src/services/dauphin/src/dauphin-lib-std/src/: lib.rs
src/services/dauphin/src/dauphin-lib-std/src/compile/: assign.rs  eq.rs  extend.rs  library.rs  numops.rs  print.rs  vector.rs
src/services/dauphin/src/dauphin-lib-std/src/interp/: eq.rs  library.rs  numops.rs  print.rs  vector.rs
src/services/dauphin/src/dauphin-lib-std/src/stream/: stream.rs
src/services/dauphin/src/dauphin/src/: main.rs  suitebuilder.rs  testsuite.rs
(+448 files in other folders)
