[package]
name = "dauphin_interp"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor="*"
lazy_static="*"

[dev-dependencies]
dauphin_compile = { path = "../dauphin-compile" }
dauphin_lib_std = { path = "../dauphin-lib-std", features = ["compile"] }

