[package]
name = "dauphin_lib_buildtime_compile"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dauphin_interp_common = { path = "../dauphin-interp-common" }
dauphin_compile = { path = "../dauphin-compile" }
serde_cbor = "*"
rust-ini="*"

[dev-dependencies]
dauphin_lib_std_compile = { path = "../dauphin-lib-std-compile" }
dauphin_lib_std_interp = { path = "../dauphin-lib-std-interp" }