[package]
name = "dauphin_compile"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

[dependencies]
clap = "*"
hex = "0.3.2"
lazy_static = "1.3.0"
owning_ref="*"
serde_cbor="*"
crc="*"
rust-ini="*"
regex="*"

dauphin_interp_common = { path = "../dauphin-interp-common" }
dauphin_compile_common = { path = "../dauphin-compile-common" }

dauphin_lib_std_compile = { path = "../dauphin-lib-std-compile" }
dauphin_lib_std_interp = { path = "../dauphin-lib-std-interp" }

dauphin_interp = { path = "../dauphin-interp" }

#[profile.test]
#opt-level = 3
