[package]
name = "dauphin_compile"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

[dependencies]
clap = "*"
hex = "0.3.2"
lazy_static = "1.3.0"
owning_ref="*"
serde_cbor="*"
crc="*"
regex="*"

dauphin_interp = { path = "../dauphin-interp" }

#[profile.test]
#opt-level = 3

[dev-dependencies]
dauphin_lib_std = { path = "../dauphin-lib-std" }
