[package]
name = "dauphin_interp"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_cbor = "*"
dauphin_interp_common = { path = "../dauphin-interp-common" }

[dev-dependencies]
dauphin_compile = { path = "../dauphin-compile" }
dauphin_interp = { path = "../dauphin-interp" }
dauphin_lib_std_interp = { path = "../dauphin-lib-std-interp" }
dauphin_lib_std_compile = { path = "../dauphin-lib-std-compile" }
dauphin_compile_common = { path = "../dauphin-compile-common" }
