[package]
name = "dauphin"
version = "0.1.0"
authors = ["Dan Sheppard <dan@ebi.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="*"
serde_cbor="*"
clap="*"

dauphin_interp_common = { path = "../dauphin-interp-common" }

dauphin_lib_std_compile = { path = "../dauphin-lib-std-compile" }
dauphin_lib_std_interp = { path = "../dauphin-lib-std-interp" }
dauphin_lib_buildtime_compile = { path = "../dauphin-lib-buildtime-compile" }

dauphin_compile = { path = "../dauphin-compile" }
